--- a/CashFlowLite/CashFlowLite.Application/CashFlowLite.Application.csproj
+++ b/CashFlowLite/CashFlowLite.Application/CashFlowLite.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <ProjectReference Include="..\CashFlowLite.Domain\CashFlowLite.Domain.csproj" />
   </ItemGroup>
 
 </Project>
