--- a/CashFlowLite/CashFlowLite.Infrastructure/CashFlowLite.Infrastructure.csproj
+++ b/CashFlowLite/CashFlowLite.Infrastructure/CashFlowLite.Infrastructure.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CashFlowLite.Application\CashFlowLite.Application.csproj" />
     <ProjectReference Include="..\CashFlowLite.Domain\CashFlowLite.Domain.csproj" />
   </ItemGroup>
 
