--- a/CashFlowLite/CashFlowLite.API/CashFlowLite.API.csproj
+++ b/CashFlowLite/CashFlowLite.API/CashFlowLite.API.csproj
@@ -7,7 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.19">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CashFlowLite.Application\CashFlowLite.Application.csproj" />
+    <ProjectReference Include="..\CashFlowLite.Infrastructure\CashFlowLite.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
