--- a/CashFlowLite/CashFlowLite.API/appsettings.json
+++ b/CashFlowLite/CashFlowLite.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1434;Database=CashFlowLiteDb;User Id=sa;Password=tywess+tWGRYH34652;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
