--- a/CashFlowLite/CashFlowLite.Application/CashFlowLite.Application.csproj
+++ b/CashFlowLite/CashFlowLite.Application/CashFlowLite.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="8.0.19" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CashFlowLite.Domain\CashFlowLite.Domain.csproj" />
   </ItemGroup>
 
