refactor(solution): update project

--- a/CashFlowLite/CashFlowLite.API/appsettings.json
+++ b/CashFlowLite/CashFlowLite.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1434;Database=CashFlowLiteDb;User Id=sa;Password=tywess+tWGRYH34652;TrustServerCertificate=True;"
+    "DefaultConnection": "your-conn-string"
   },
   "Logging": {
     "LogLevel": {
